# headshot

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .semgrep.yml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  Dockerfile.gitlab  IMPLEMENTATION_PLAN.md  PLAN.md  README.md  THREAT_MODEL.md  TICKETS.md  USERS.md  alembic.ini  compose.yaml  pyproject.toml  ruff.toml  security_best_practices_report.md
.github/workflows/: ci.yml
.playwright-cli/: page-2026-07-21T16-25-39-038Z.yml  page-2026-07-21T16-25-44-470Z.yml  page-2026-07-21T16-25-49-279Z.yml  page-2026-07-21T16-25-53-890Z.yml  page-2026-07-21T16-26-00-171Z.yml  page-2026-07-21T16-26-01-302Z.yml  page-2026-07-21T16-26-05-275Z.yml  page-2026-07-21T16-26-10-203Z.yml
.tdd-swarm/: LESSONS.md  final-submission-manifest.md  gates.md  posture.md  progress.md  wf-m11-coordinator.js  wf-m11-integration-review.js  wf-m2-datamodel.js  wf-m4-impl.js  wf-m4-policy-gateway.js  wf-m5-openemr.js  wf-m6a-impl.js  wf-m6a-observability.js  wf-m8-redteam.js  wf-m9-judge.js  wf-offline-e2e.js  wf-packaging-schemas.js  wf-phase0-dotenv-redaction.js
.tdd-swarm/prompts/: PROMPT_TEMPLATE.md  T-F00-code-review.md  T-F00-implement.md  T-F00-security.md  T-F00-test-review.md  T-F00-test.md  T-F01a-code-review.md  T-F01a-implement.md  T-F01a-security.md  T-F01a-test-review.md  T-F01a-test.md  T-F01b-evidence-review.md  T-F01b-execute.md  T-F02-code-review.md  T-F02-implement.md  T-F02-security.md  T-F02-test-review.md  T-F02-test.md  T-F03a-code-review.md  T-F03a-implement.md  T-F03a-security.md  T-F03a-test-review.md  T-F03a-test.md  T-F03b-evidence-review.md  T-F03b-execute.md  T-F04a-code-review.md  T-F04a-implement.md  T-F04a-security.md  T-F04a-test-review.md  T-F04a-test.md  T-F04b-evidence-review.md  T-F04b-execute.md  T-F04c-code-review.md  T-F04c-implement.md  T-F04c-security.md  T-F04c-test-review.md  T-F04c-test.md  T-F04d-code-review.md  T-F04d-implement.md  T-F04d-security.md  (+76 more)
.tdd-swarm/reports/: final-gap-plan-review.md  final-gap-planner.md  live-gate-readiness.md  openrouter-readiness.md  openrouter-scope-amendment.md  openrouter-scope-review-definitive.md  openrouter-scope-review-final.md  openrouter-scope-review.md  performance-readiness.md
console/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
console/scripts/: check-forbidden-language.mjs  check-production-bundle.mjs
console/src/: App.tsx  data.ts  main.tsx  router.ts  types.ts
console/tests/: RED_EVIDENCE.md  adversarial-text.test.tsx  analytics.test.tsx  api-client.test.ts  birdseye.test.tsx  command-button.test.tsx  console-events.test.tsx  contracts.test.ts  observability.test.ts  production-policy.test.ts  read-models.test.tsx  router.test.ts  stream.test.ts
contracts/v1/: campaign_directive.json  errors.json  regression_admission.json
docs/: DEVLOG.md
docs/adrs/: 0001-build-vs-configure.md  0002-identity-and-access.md
docs/cost/: COST_ANALYSIS.md
docs/defense/: DEFENSE_SCRIPT.md
docs/demo/: MVP_DEMO_SCRIPT.md  SECURITY_EVIDENCE_TALKING_POINTS.md
docs/deployment/: RAILWAY.md
docs/diagrams/: D2-D4-agent-interaction-trust.excalidraw  D2-D4-agent-interaction-trust.spec.md
docs/evidence/: OWASP_COVERAGE_MATRIX.md
docs/integration/: BIRDSEYE_LIVE_DATA_GAP_ANALYSIS.md  INTEGRATION_PACKET.md
docs/planning/: ARCHITECTURE_DRAFT.md  CLAUDE_CODE_HANDOFF.md  DECISIONS.md  DIAGRAM_PLAN.md  M11_OFFLINE_CORPUS_HANDOFF.md  M1D_INTEGRATION_HANDOFF.md  M3_QUEUE_HANDOFF.md  PRESEARCH.md  RESEARCH.md  REVIEW_FINDINGS.md  SECURITY_TOOL_INTEGRATION_PLAN.md  TARGET_AGNOSTIC_BACKEND_HANDOFF.md  gap-audit.md
docs/requirements/: REQUIREMENTS_MATRIX.csv  REQUIREMENTS_MATRIX.md
docs/security/: AUTHENTICATION.md  LLM_SECURITY_WORKBENCH.md  LLM_TOOLCHAIN.md
docs/triage/: SIMULATED_SCAN_TRIAGE.md
evals/fixtures/: synthetic-clinical-context-v1.json
evals/ground-truth/: data-exfiltration.v1.json  prompt-injection.v1.json  tool-misuse.v1.json
evals/results/: README.md
evals/schemas/: attack-case.v1.json
evals/seeds/: AF-M11-DX-001.json  AF-M11-DX-002.json  AF-M11-DX-003.json  AF-M11-PI-001.json  AF-M11-PI-002.json  AF-M11-PI-003.json  AF-M11-TM-001.json  AF-M11-TM-002.json  AF-M11-TM-003.json
migrations/: env.py  script.py.mako
migrations/versions/: 0001_initial.py  0003_coverage_view.py  (+11 more)
railway/: README.md  runner.json  scheduler.json  web.json
scripts/: check.sh  preflight_status.py  run_judge_calibration.py  run_offline_llm_tools.sh  secret_scan.sh  smoke_ready_container.sh  smoke_runtime_container.sh  verify_container_archive.sh  verify_container_migrations.sh  verify_runtime_image.sh  wheel_outside_repo_check.sh
security-tools/: toolchain.lock.json
tests/: _db.py  conftest.py  test_agent_runtime.py  test_birdseye_api.py  test_campaign_authorization.py  test_campaign_cli.py  test_campaign_composition_root.py  test_campaign_coordinator.py  test_campaign_session_lease.py  test_config.py  test_config_dotenv.py  test_config_env_isolation.py  test_config_security.py  test_db_roles.py  test_documentation_agent.py  test_documentation_storage.py  test_env_isolation.py  test_evidence_envelope.py  test_full_scan_corpus.py  test_gateway.py  test_health.py  test_judge.py  test_judge_calibration.py  test_migrations.py  test_models.py  test_observability.py  test_offline_e2e.py  test_openemr_adapter.py  test_openemr_adapter_chat.py  test_orchestrator.py  test_outbound_telemetry.py  test_packaging.py  test_postgres_api_m1d.py  test_preflight.py  test_queue.py  test_readiness.py  test_readiness_m1d.py  test_recorder.py  test_red_team.py  test_red_team_handoff.py  (+11 more)
tickets/: T-F00.md  T-F01a.md  T-F01b.md  T-F02.md  T-F03a.md  T-F03b.md  T-F04a.md  T-F04b.md  T-F04c.md  T-F04d.md  T-F04e.md  T-F04f.md  T-F04g.md  T-F04h.md  T-F05a.md  T-F05b.md  T-F05c.md  T-F06a.md  T-F06b.md  T-F07a.md  T-F07b.md  T-F08.md  T-F09a.md  T-F09b.md  T-F10a.md  T-F10b.md  T-F10c.md  T-F11.md  T-F12.md  T-F13.md  T-F14a.md  T-F14b.md  T-F15.md
(+222 files in other folders)
