[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentforge"
version = "0.1.0"
description = "AgentForge / Adversarial Machine — a reusable multi-agent adversarial evaluation platform. This package holds the framework-neutral core (domain, target adapters, contracts); runtime agents land in later phases."
requires-python = ">=3.12"
license = { text = "UNLICENSED" }
# Runtime deps are scoped to the deployment/health surface only. The framework-neutral
# core (domain, contracts, config) imports NONE of these (D10); only agentforge.health
# imports fastapi. uvicorn is the ASGI server the Dockerfile/compose run the app under.
# psycopg backs the /ready DB-connectivity probe (M1a); it is imported lazily inside the
# readiness path only — never at config.py top level (D10).
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
# Local dev tooling only. httpx backs fastapi's TestClient used by the health tests.
dev = ["ruff>=0.6", "pytest>=8", "jsonschema>=4", "pre-commit>=3", "httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# src-layout: make the package importable in tests without requiring an editable install.
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
