[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentforge"
version = "0.1.0"
description = "AgentForge / Adversarial Machine — a reusable multi-agent adversarial evaluation platform. This package holds the framework-neutral core (domain, target adapters, contracts); runtime agents land in later phases."
requires-python = ">=3.12"
license = { text = "UNLICENSED" }
# Runtime deps are scoped to the deployment/health surface only. The framework-neutral
# core (domain, contracts, config) imports NONE of these (D10); only agentforge.health
# imports fastapi. uvicorn is the ASGI server the Dockerfile/compose run the app under.
# psycopg backs the /ready DB-connectivity probe (M1a); it is imported lazily inside the
# readiness path only — never at config.py top level (D10).
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "psycopg[binary]>=3.1",
    # Loads .env / .env.local so Settings.from_env resolves file-provided vars. Imported
    # lazily inside from_env only — never at config.py top level (D10). Secrets are read
    # by reference at use time, never logged or inlined.
    "python-dotenv>=1.0",
    # Storage layer only (agentforge.storage / migrations). The framework-neutral core
    # (config, domain, contracts, secrets) imports NONE of these — enforced by the
    # import-purity test. SQLAlchemy 2.x models the exploit DB; Alembic runs the
    # expand/contract migrations (D7). Both bind to Postgres via the psycopg (v3) driver
    # using the `postgresql+psycopg://` dialect.
    "sqlalchemy>=2.0",
    "alembic>=1.13",
]

[project.optional-dependencies]
# Local dev tooling only. httpx backs fastapi's TestClient used by the health tests.
dev = ["ruff>=0.6", "pytest>=8", "jsonschema>=4", "pre-commit>=3", "httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Ship roles.sql inside the wheel so migration 0001's importlib.resources lookup resolves
# under a NON-editable install (e.g. `pip install .` in the Dockerfile). Without this, an
# `alembic upgrade` in a deployed container would crash — editable installs (CI/local) mask it.
"agentforge.storage" = ["*.sql"]

[tool.pytest.ini_options]
# src-layout: make the package importable in tests without requiring an editable install.
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
